--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -4,7 +4,7 @@
   <p><%= portfolio_items.title %></p>
   <p><%= portfolio_items.subtitle %></p>
   <p><%= portfolio_items.body %></p>
-  <%= image_tag portfolio_items.thumb_image %>
+  <%= image_tag portfolio_items.thumb_image unless portfolio_items.thumb_image.nil? %>
 
 
 <% end %>
