--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -1,16 +1,16 @@
 <h1>Edit this Portfolio Item</h1>
 
-<%= form_for(@portfolio_items) do |f| %>
+<%= form_for(@portfolio_item) do |f| %>
   <div class="field">
     <%= f.label :title %>
     <%= f.text_field :title %>
   </div>
 
-<div class="field">
+  <div class="field">
     <%= f.label :subtitle %>
     <%= f.text_field :subtitle %>
   </div>
-  
+
   <div class="field">
     <%= f.label :body %>
     <%= f.text_area :body %>
