intigrated helper methodsfrom ActionView

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,7 @@
 <h1>Contact Page</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+
+<p><%= number_to_phone "666-666-6666"%></p>
+
+<p><%= number_to_currency "17"%></p>
+
+<p><%= number_with_delimiter "4555555"%></p>
