--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -2,6 +2,5 @@
 
 <p><%= number_to_phone "666-666-6666"%></p>
 
-<p><%= number_to_currency "17"%></p>
 
-<p><%= number_with_delimiter "4555555"%></p>
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12012.535830921022!2d-111.9701346!3d41.175245350000004!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe753fad5694f923a!2sBonneville+High+School!5e0!3m2!1sen!2sus!4v1501169391024" width="450" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
