updated styles for user edit page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,7 @@
-<h1>About Page</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>About Me</h1>
+
+<hr>
+
+<p>Im a person</p>
+
+<p>Who just happens to love cats</p>
