--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -169,9 +169,9 @@ h6, .h6 {
 }
 
 /*
- * Custom styles
+ * custom styles
  */
-
-.social-links li {
-  font-size: 2.5em;
-}
+ 
+ .social-links li {
+   font-size: 1.5em;
+ }
