--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,7 +1,9 @@
-<div class="<%= location %>">
-  <div><%= link_to "Home", root_path %></div>
-  <div><%= link_to "About Me", about_me_path %></div>
-  <div><%= link_to "Contact", contact_path %></div>
-  <div><%= link_to "Blog", blogs_path %></div>
-  <div><%= link_to "Portfolio", portfolios_path %></div>
+<div class="masthead clearfix">
+  <div class="inner">
+    <h3 class="masthead-brand">Jordan Hudgens</h3>
+    <nav class="nav nav-masthead app-nav">
+      <%= nav_helper 'nav-link', 'span' %>
+      <%= login_helper 'nav-link' %>
+    </nav>
+  </div>
 </div>
