updated image for about me page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,6 +2,14 @@
 
 <hr>
 
-<p>Im a person</p>
+<div class="row">
+  <div class="col-md-4">
+ <%= image_tag "https://ca.slack-edge.com/T5RNKBKGQ-U5XC30A2J-e00fc57f17ec-512", width: 300, alt: "profile image" %>
+ </div>
 
-<p>Who just happens to love cats</p>
+  <div class="col-md-8">
+    <p>I am a person</p>
+
+    <p>Who just happens to love cats aLOT</p>
+  </div>
+</div>
