--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,7 +4,7 @@
 
 <div class="row">
   <div class="col-md-4">
- <%= image_tag "https://ca.slack-edge.com/T5RNKBKGQ-U5XC30A2J-e00fc57f17ec-512", width: 300, alt: "profile image" %>
+ <%= image_tag "profile.jpg", width: 300, alt: "profile image" %>
  </div>
 
   <div class="col-md-8">
