implemented gritter for notifications

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
               autoplay: true,
               loop: true,
               muted: true,
-              poster: 'home_bg.png'
+              poster: 'home_back.png'
             )
             %>
 
@@ -33,6 +33,8 @@
           <%= yield %>
 
           <%= render "shared/application_footer" %>
+
+          <%= render 'shared/alerts' %>
 
           <%= source_helper("application") %>
 
