refactored alerts in help methos

--- a/app/views/shared/_alerts.html.erb
+++ b/app/views/shared/_alerts.html.erb
@@ -4,4 +4,4 @@
   <%= js add_gritter(flash[:error], title: "Kayleece Gentry Portfolio", sticky: false) %>
 <% else %>
   <%= js add_gritter(flash[:notice], title: "Kayleece Gentry Portfolio", sticky: false) %>
-<% end %>
+<% end %Kayleece
