--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,12 +19,12 @@
         <div class="cover-container">
 
           <%= video_tag(
-              'vid_back.mp4',
+              'HardDrivePhotojpeg.mp4',
               id: 'background',
               autoplay: true,
               loop: true,
               muted: true,
-              poster: 'home_back.png'
+              poster: 'home_bg.png'
             )
             %>
 
@@ -34,7 +34,7 @@
 
           <%= render "shared/application_footer" %>
 
-          <%= render 'shared/alerts' %>
+          <%= alerts %>
 
           <%= source_helper("application") %>
 
