--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -17,8 +17,8 @@
 
     <%= render 'shared/blog_nav' %>
     <%= render 'shared/blog_masthead' %>
-      
-       <div class="container">
+
+    <div class="container">
 
       <div class="row">
 
@@ -27,11 +27,11 @@
         <%= render 'shared/blog_sidebar' %>
       </div>
 
-        <!-- start of footer -->
-       <%= render 'shared/blog_footer' %>
-        <!-- end of footer -->
+      <%= render 'shared/blog_footer' %>
 
-        <%= source_helper("blog") %>
+      <%= alerts %>
+
+      <%= source_helper("blog") %>
     </div>
   </body>
 </html>
